@@ -30,10 +30,12 @@ import org.eclipse.egit.github.core.service.*;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.io.BufferedInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static com.walmartlabs.concord.plugins.git.Utils.getUrl;
@@ -101,6 +103,16 @@ public class GitHubTask {
 
     private static final TypeReference<List<Map<String, Object>>> LIST_OF_OBJECT_TYPE = new TypeReference<List<Map<String, Object>>>() {
     };
+
+    private final boolean dryRunMode;
+
+    public GitHubTask() {
+        this(false);
+    }
+
+    public GitHubTask(boolean dryRunMode) {
+        this.dryRunMode = dryRunMode;
+    }
 
     public Map<String, Object> execute(Map<String, Object> in, Map<String, Object> defaults) {
         Action action = getAction(in);
@@ -174,7 +186,8 @@ public class GitHubTask {
             }
             case GETCONTENT: {
                 return getContent(in, gitHubUri);
-            } case CREATEHOOK: {
+            }
+            case CREATEHOOK: {
                 return createHook(in, gitHubUri);
             }
             case GETPRFILES: {
@@ -185,7 +198,7 @@ public class GitHubTask {
         }
     }
 
-    private static Map<String, Object> createPR(Map<String, Object> in, String gitHubUri) {
+    private Map<String, Object> createPR(Map<String, Object> in, String gitHubUri) {
         String gitHubAccessToken = assertString(in, GITHUB_ACCESSTOKEN);
         String gitHubOrgName = assertString(in, GITHUB_ORGNAME);
         String gitHubRepoName = assertString(in, GITHUB_REPONAME);
@@ -196,7 +209,7 @@ public class GitHubTask {
 
         log.info("Creating PR in {}/{} from {} to {}", gitHubOrgName, gitHubRepoName, gitHubPRHead, gitHubPRBase);
 
-        GitHubClient client = GitHubClient.createClient(gitHubUri);
+        GitHubClient client = createClient(gitHubUri);
         try {
             //Connect to GitHub
             client.setOAuth2Token(gitHubAccessToken);
@@ -210,6 +223,11 @@ public class GitHubTask {
             pr.setBody(gitHubPRBody);
             pr.setHead(new PullRequestMarker().setLabel(gitHubPRHead));
             pr.setBase(new PullRequestMarker().setLabel(gitHubPRBase));
+
+            if (dryRunMode) {
+                log.info("Dry-run mode enabled: Skipping PR creation");
+                return Map.of("prId", 0); // let's return some `fake` ID
+            }
 
             PullRequest result = prService.createPullRequest(repo, pr);
             if (result != null) {
@@ -228,7 +246,7 @@ public class GitHubTask {
         String gitHubRepoName = assertString(in, GITHUB_REPONAME);
         int gitHubPRID = assertInt(in, GITHUB_PRID);
 
-        GitHubClient client = GitHubClient.createClient(gitHubUri);
+        GitHubClient client = createClient(gitHubUri);
         client.setOAuth2Token(gitHubAccessToken);
 
         IRepositoryIdProvider repo = RepositoryId.create(gitHubOrgName, gitHubRepoName);
@@ -244,43 +262,53 @@ public class GitHubTask {
         }
     }
 
-    private static Map<String, Object> commentPR(Map<String, Object> in, String gitHubUri) {
+    private Map<String, Object> commentPR(Map<String, Object> in, String gitHubUri) {
         String gitHubAccessToken = assertString(in, GITHUB_ACCESSTOKEN);
         String gitHubOrgName = assertString(in, GITHUB_ORGNAME);
         String gitHubRepoName = assertString(in, GITHUB_REPONAME);
         String gitHubPRComment = assertString(in, GITHUB_PRCOMMENT);
         int gitHubPRID = assertInt(in, GITHUB_PRID);
 
-        GitHubClient client = GitHubClient.createClient(gitHubUri);
+        GitHubClient client = createClient(gitHubUri);
         client.setOAuth2Token(gitHubAccessToken);
         IRepositoryIdProvider repo = RepositoryId.create(gitHubOrgName, gitHubRepoName);
 
         IssueService issueService = new IssueService(client);
         PullRequestService prService = new PullRequestService(client);
 
+        if (dryRunMode) {
+            log.info("Dry-run mode enabled: Skipping comment on PR #{} in {}/{}", gitHubPRID, gitHubOrgName, gitHubRepoName);
+            return Map.of("id", 0);
+        }
+
         log.info("Commenting PR #{} in {}/{}", gitHubPRID, gitHubOrgName, gitHubRepoName);
 
         try {
             PullRequest pullRequest = prService.getPullRequest(repo, gitHubPRID);
-            issueService.createComment(repo, Integer.toString(pullRequest.getNumber()), gitHubPRComment);
+            Comment response = issueService.createComment(repo, Integer.toString(pullRequest.getNumber()), gitHubPRComment);
             log.info("Commented on PR# {}", gitHubPRID);
 
-            return Collections.emptyMap();
+            return Map.of("id", response.getId());
         } catch (IOException e) {
             throw new RuntimeException("Cannot comment on the pull request: " + e.getMessage());
         }
     }
 
-    private static Map<String, Object> mergePR(Map<String, Object> in, String gitHubUri) {
+    private Map<String, Object> mergePR(Map<String, Object> in, String gitHubUri) {
         String gitHubAccessToken = assertString(in, GITHUB_ACCESSTOKEN);
         String gitHubOrgName = assertString(in, GITHUB_ORGNAME);
         String gitHubRepoName = assertString(in, GITHUB_REPONAME);
         int gitHubPRID = assertInt(in, GITHUB_PRID);
         String commitMessage = getString(in, GITHUB_MERGECOMMITMSG, "GitHub PR Merge");
         String mergeMethod = getString(in, GITHUB_MERGE_METHOD);
-        GitHubClient client = GitHubClient.createClient(gitHubUri);
+        GitHubClient client = createClient(gitHubUri);
         client.setOAuth2Token(gitHubAccessToken);
         IRepositoryIdProvider repo = RepositoryId.create(gitHubOrgName, gitHubRepoName);
+
+        if (dryRunMode) {
+            log.info("Dry-run mode enabled: Skipping merge in PR #{} in {}/{}", gitHubPRID, gitHubOrgName, gitHubRepoName);
+            return Map.of();
+        }
 
         try {
             log.info("Merging PR #{} in {}/{}", gitHubPRID, gitHubOrgName, gitHubRepoName);
@@ -301,15 +329,20 @@ public class GitHubTask {
         }
     }
 
-    private static Map<String, Object> closePR(Map<String, Object> in, String gitHubUri) {
+    private Map<String, Object> closePR(Map<String, Object> in, String gitHubUri) {
         String gitHubAccessToken = assertString(in, GITHUB_ACCESSTOKEN);
         String gitHubOrgName = assertString(in, GITHUB_ORGNAME);
         String gitHubRepoName = assertString(in, GITHUB_REPONAME);
         int gitHubPRID = assertInt(in, GITHUB_PRID);
 
-        GitHubClient client = GitHubClient.createClient(gitHubUri);
+        GitHubClient client = createClient(gitHubUri);
         client.setOAuth2Token(gitHubAccessToken);
         IRepositoryIdProvider repo = RepositoryId.create(gitHubOrgName, gitHubRepoName);
+
+        if (dryRunMode) {
+            log.info("Dry-run mode enabled: Skipping closing of PR #{} in {}/{}", gitHubPRID, gitHubOrgName, gitHubRepoName);
+            return Map.of();
+        }
 
         PullRequestService prService = new PullRequestService(client);
         try {
@@ -327,7 +360,7 @@ public class GitHubTask {
         }
     }
 
-    private static Map<String, Object> merge(Map<String, Object> in, String gitHubUri) {
+    private Map<String, Object> merge(Map<String, Object> in, String gitHubUri) {
         String gitHubAccessToken = assertString(in, GITHUB_ACCESSTOKEN);
         String gitHubOrgName = assertString(in, GITHUB_ORGNAME);
         String gitHubRepoName = assertString(in, GITHUB_REPONAME);
@@ -335,7 +368,7 @@ public class GitHubTask {
         String base = assertString(in, GITHUB_MERGEBASE);
         String commitMessage = assertString(in, GITHUB_MERGECOMMITMSG);
 
-        GitHubClient client = GitHubClient.createClient(gitHubUri);
+        GitHubClient client = createClient(gitHubUri);
         //Connect to GitHub
         client.setOAuth2Token(gitHubAccessToken);
         IRepositoryIdProvider repo = RepositoryId.create(gitHubOrgName, gitHubRepoName);
@@ -347,9 +380,14 @@ public class GitHubTask {
         params.put("head", head);
         params.put("commit_message", commitMessage);
 
+        if (dryRunMode) {
+            log.info("Dry-run mode enabled: Skipping merging of {} in {}/{}", head, gitHubOrgName, gitHubRepoName);
+            return Map.of();
+        }
+
         log.info("Merging {} in {}/{}", head, gitHubOrgName, gitHubRepoName);
 
-        try (InputStream ignored = client.postStream(uri, params)){
+        try (InputStream ignored = client.postStream(uri, params)) {
 
             log.info("Merged '{}' with '{}'", head, base);
 
@@ -366,7 +404,7 @@ public class GitHubTask {
         String gitHubRepoName = assertString(in, GITHUB_REPONAME);
         String gitHubCommitSha = assertString(in, GITHUB_COMMIT_SHA);
 
-        GitHubClient client = GitHubClient.createClient(gitHubUri);
+        GitHubClient client = createClient(gitHubUri);
         client.setOAuth2Token(gitHubAccessToken);
         IRepositoryIdProvider repo = RepositoryId.create(gitHubOrgName, gitHubRepoName);
 
@@ -382,16 +420,18 @@ public class GitHubTask {
             Repository repository = repositoryService.getRepository(repo);
             String defaultBranch = repository.getDefaultBranch();
 
-            if (defaultBranch != null && ! defaultBranch.trim().isEmpty()) {
+            if (defaultBranch != null && !defaultBranch.trim().isEmpty()) {
                 data.put("defaultBranch", defaultBranch);
             }
-            return Collections.singletonMap("result", makeResult(data));
+            // result just for backward compatibility
+            return Map.of("result", makeResult(data),
+                    "commit", data);
         } catch (IOException e) {
             throw new RuntimeException("Failed to get commit data: " + e.getMessage());
         }
     }
 
-    private static Map<String, Object> createTag(Map<String, Object> in, String gitHubUri) {
+    private Map<String, Object> createTag(Map<String, Object> in, String gitHubUri) {
         String gitHubAccessToken = assertString(in, GITHUB_ACCESSTOKEN);
         String gitHubOrgName = assertString(in, GITHUB_ORGNAME);
         String gitHubRepoName = assertString(in, GITHUB_REPONAME);
@@ -399,10 +439,19 @@ public class GitHubTask {
         String gitHubTagMessage = assertString(in, GITHUB_TAGMESSAGE);
         String gitHubTaggerUID = assertString(in, GITHUB_TAGGERUID);
         String gitHubTaggerEMAIL = assertString(in, GITHUB_TAGGEREMAIL);
-        String gitHubBranchSHA = assertString(in, GITHUB_COMMIT_SHA);
+        String gitHubBranchSHA = getString(in, GITHUB_COMMIT_SHA);
+        String githubBranch = getString(in, GITHUB_BRANCH);
+
+        if (isBlank(gitHubBranchSHA) && isBlank(githubBranch)) {
+            throw new IllegalArgumentException("Invalid task input parameters: " + GITHUB_COMMIT_SHA + " or " + GITHUB_BRANCH + " is required");
+        }
+
+        if (isBlank(gitHubBranchSHA)) {
+            gitHubBranchSHA = getLatestSHAValue(in, gitHubUri);
+        }
 
         //Initiate the client
-        GitHubClient client = GitHubClient.createClient(gitHubUri);
+        GitHubClient client = createClient(gitHubUri);
         //Connect to GitHub
         client.setOAuth2Token(gitHubAccessToken);
         IRepositoryIdProvider repo = RepositoryId.create(gitHubOrgName, gitHubRepoName);
@@ -422,6 +471,11 @@ public class GitHubTask {
         tag.setMessage(gitHubTagMessage);
         tag.setObject(typedResource);
         tag.setTagger(commitUser);
+
+        if (dryRunMode) {
+            log.info("Dry-run mode enabled: Skipping creation of tag '{}' for commit '{}' in {}/{}", gitHubTagVersion, gitHubBranchSHA, gitHubOrgName, gitHubRepoName);
+            return Map.of();
+        }
 
         log.info("Creating tag '{}' for commit '{}' in {}/{}", gitHubTagVersion, gitHubBranchSHA, gitHubOrgName, gitHubRepoName);
 
@@ -449,20 +503,25 @@ public class GitHubTask {
         }
     }
 
-    private static Map<String, Object> deleteTag(Map<String, Object> in, String gitHubUri) {
+    private Map<String, Object> deleteTag(Map<String, Object> in, String gitHubUri) {
         String gitHubAccessToken = assertString(in, GITHUB_ACCESSTOKEN);
         String gitHubOrgName = assertString(in, GITHUB_ORGNAME);
         String gitHubRepoName = assertString(in, GITHUB_REPONAME);
         String gitHubTagName = assertString(in, GITHUB_TAGNAME);
 
         //Initiate the client
-        GitHubClient client = GitHubClient.createClient(gitHubUri);
+        GitHubClient client = createClient(gitHubUri);
         //Connect to GitHub
         client.setOAuth2Token(gitHubAccessToken);
         IRepositoryIdProvider repo = RepositoryId.create(gitHubOrgName, gitHubRepoName);
 
         Tag tag = new Tag();
         tag.setTag(gitHubTagName);
+
+        if (dryRunMode) {
+            log.info("Dry-run mode enabled: Skipping deletion of tag '{}' in {}/{}", gitHubTagName, gitHubOrgName, gitHubRepoName);
+            return Map.of();
+        }
 
         log.info("Deleting tag '{}' in {}/{}", gitHubTagName, gitHubOrgName, gitHubRepoName);
 
@@ -478,17 +537,22 @@ public class GitHubTask {
         }
     }
 
-    private static Map<String, Object> deleteBranch(Map<String, Object> in, String gitHubUri) {
+    private Map<String, Object> deleteBranch(Map<String, Object> in, String gitHubUri) {
         String gitHubAccessToken = assertString(in, GITHUB_ACCESSTOKEN);
         String gitHubOrgName = assertString(in, GITHUB_ORGNAME);
         String gitHubRepoName = assertString(in, GITHUB_REPONAME);
         String gitHubBranchName = assertString(in, GITHUB_BRANCH);
 
         //Initiate the client
-        GitHubClient client = GitHubClient.createClient(gitHubUri);
+        GitHubClient client = createClient(gitHubUri);
         //Connect to GitHub
         client.setOAuth2Token(gitHubAccessToken);
         IRepositoryIdProvider repo = RepositoryId.create(gitHubOrgName, gitHubRepoName);
+
+        if (dryRunMode) {
+            log.info("Dry-run mode enabled: Skipping deletion of branch '{}' in {}/{}", gitHubBranchName, gitHubOrgName, gitHubRepoName);
+            return Map.of();
+        }
 
         log.info("Deleting branch '{}' in {}/{}", gitHubBranchName, gitHubOrgName, gitHubRepoName);
 
@@ -504,7 +568,7 @@ public class GitHubTask {
         }
     }
 
-    private static Map<String, Object> addStatus(Map<String, Object> in, String gitHubUri) {
+    private Map<String, Object> addStatus(Map<String, Object> in, String gitHubUri) {
         String gitHubAccessToken = assertString(in, GITHUB_ACCESSTOKEN);
         String gitHubOrgName = assertString(in, GITHUB_ORGNAME);
         String gitHubRepoName = assertString(in, GITHUB_REPONAME);
@@ -515,10 +579,16 @@ public class GitHubTask {
         String description = getString(in, STATUS_CHECK_DESCRIPTION, null);
         String context = getString(in, STATUS_CHECK_CONTEXT, "default");
 
-        log.info("Creating status check ({}) in {}/{} repo with sha '{}'",
+        if (dryRunMode) {
+            log.info("Dry-run mode enabled: Skipping creation of a status check ({}) in {}/{} repository with sha '{}'",
+                    state, gitHubOrgName, gitHubRepoName, commitSha);
+            return Map.of();
+        }
+
+        log.info("Creating a status check ({}) in {}/{} repository with sha '{}'",
                 state, gitHubOrgName, gitHubRepoName, commitSha);
 
-        GitHubClient client = GitHubClient.createClient(gitHubUri);
+        GitHubClient client = createClient(gitHubUri);
         client.setOAuth2Token(gitHubAccessToken);
         IRepositoryIdProvider repo = RepositoryId.create(gitHubOrgName, gitHubRepoName);
 
@@ -555,7 +625,7 @@ public class GitHubTask {
         String commitSha = assertString(in, GITHUB_COMMIT_SHA);
 
         ObjectMapper objectMapper = new ObjectMapper();
-        GitHubClient client = GitHubClient.createClient(gitHubUri);
+        GitHubClient client = createClient(gitHubUri);
         client.setOAuth2Token(gitHubAccessToken);
         IRepositoryIdProvider repo = RepositoryId.create(gitHubOrgName, gitHubRepoName);
 
@@ -570,13 +640,18 @@ public class GitHubTask {
         }
     }
 
-    private static Map<String, Object> forkRepo(Map<String, Object> in, String gitHubUri) {
+    private Map<String, Object> forkRepo(Map<String, Object> in, String gitHubUri) {
         String gitHubAccessToken = assertString(in, GITHUB_ACCESSTOKEN);
         String gitHubOrgName = assertString(in, GITHUB_ORGNAME);
         String gitHubRepoName = assertString(in, GITHUB_REPONAME);
         String targetOrg = getString(in, GITHUB_FORKTARGETORG);
 
-        GitHubClient client = GitHubClient.createClient(gitHubUri);
+        GitHubClient client = createClient(gitHubUri);
+
+        if (dryRunMode) {
+            log.info("Dry-run mode enabled: Skipping forking of repository {}/{}", gitHubOrgName, gitHubRepoName);
+            return Map.of();
+        }
 
         try {
             //Connect to GitHub
@@ -590,14 +665,14 @@ public class GitHubTask {
                 repoService.forkRepository(repo, targetOrg);
                 log.info("Fork action completed");
             } else {
-                log.info("Forking '{}/{}' into your personal repo...", gitHubOrgName, gitHubRepoName);
+                log.info("Forking '{}/{}' into your personal repository...", gitHubOrgName, gitHubRepoName);
                 repoService.forkRepository(repo);
                 log.info("Fork action completed");
             }
 
             return Collections.emptyMap();
         } catch (Exception e) {
-            throw new RuntimeException("Error occured during fork: " + e.getMessage());
+            throw new RuntimeException("Error occurred during fork: " + e.getMessage());
         }
     }
 
@@ -606,7 +681,7 @@ public class GitHubTask {
         String gitHubOrgName = assertString(in, GITHUB_ORGNAME);
         String gitHubRepoName = assertString(in, GITHUB_REPONAME);
 
-        GitHubClient client = GitHubClient.createClient(gitHubUri);
+        GitHubClient client = createClient(gitHubUri);
 
         try {
             //Connect to GitHub
@@ -621,13 +696,13 @@ public class GitHubTask {
             log.info("Getting branch list from {}/{}...", gitHubOrgName, gitHubRepoName);
             List<RepositoryBranch> list = repoService.getBranches(repo);
             if (list != null && !list.isEmpty()) {
-                List<String> branchList = list.stream().map(RepositoryBranch::getName).collect(Collectors.toList());
+                List<String> branchList = list.stream().map(RepositoryBranch::getName).toList();
                 result = Collections.singletonMap("branchList", branchList);
             }
 
             return result;
         } catch (Exception e) {
-            throw new RuntimeException("Error occured while getting branch list: " + e.getMessage());
+            throw new RuntimeException("Error occurred while getting branch list: " + e.getMessage());
         }
     }
 
@@ -636,7 +711,7 @@ public class GitHubTask {
         String gitHubOrgName = assertString(in, GITHUB_ORGNAME);
         String gitHubRepoName = assertString(in, GITHUB_REPONAME);
 
-        GitHubClient client = GitHubClient.createClient(gitHubUri);
+        GitHubClient client = createClient(gitHubUri);
 
         try {
             //Connect to GitHub
@@ -651,13 +726,13 @@ public class GitHubTask {
             log.info("Getting tag list from '{}/{}'...", gitHubOrgName, gitHubRepoName);
             List<RepositoryTag> list = repoService.getTags(repo);
             if (list != null && !list.isEmpty()) {
-                List<String> tagList = list.stream().map(RepositoryTag::getName).collect(Collectors.toList());
+                List<String> tagList = list.stream().map(RepositoryTag::getName).toList();
                 result = Collections.singletonMap("tagList", tagList);
             }
 
             return result;
         } catch (Exception e) {
-            throw new RuntimeException("Error occured while getting tag list: " + e.getMessage());
+            throw new RuntimeException("Error occurred while getting tag list: " + e.getMessage());
         }
     }
 
@@ -667,7 +742,7 @@ public class GitHubTask {
         int gitHubPRNumber = assertInt(in, GITHUB_PRNUMBER);
         String gitHubRepoName = assertString(in, GITHUB_REPONAME);
 
-        GitHubClient client = GitHubClient.createClient(gitHubUri);
+        GitHubClient client = createClient(gitHubUri);
 
         try {
             //Connect to GitHub
@@ -695,10 +770,10 @@ public class GitHubTask {
 
         if (!GITHUB_VALID_PR_STATES.contains(state)) {
             throw new IllegalArgumentException("Invalid PR state '" + state +
-                    "'. Allowed values are only 'all', 'open', 'closed'.");
+                                               "'. Allowed values are only 'all', 'open', 'closed'.");
         }
 
-        GitHubClient client = GitHubClient.createClient(gitHubUri);
+        GitHubClient client = createClient(gitHubUri);
 
         try {
             //Connect to GitHub
@@ -727,7 +802,7 @@ public class GitHubTask {
         String gitHubRepoName = assertString(in, GITHUB_REPONAME);
         int gitHubPRNumber = assertInt(in, GITHUB_PRNUMBER);
 
-        GitHubClient client = GitHubClient.createClient(gitHubUri);
+        GitHubClient client = createClient(gitHubUri);
 
         try {
             client.setOAuth2Token(gitHubAccessToken);
@@ -742,18 +817,24 @@ public class GitHubTask {
             }
 
             // cleanup patch field
-            list = list.stream().map(f -> f.setPatch(null)).collect(Collectors.toList());
+            list = list.stream().map(f -> f.setPatch(null)).toList();
 
-            List<String> modified = list.stream().filter(f -> "modified".equals(f.getStatus())).map(CommitFile::getFilename).collect(Collectors.toList());
-            List<String> removed = list.stream().filter(f -> "removed".equals(f.getStatus())).map(CommitFile::getFilename).collect(Collectors.toList());
-            List<String> added = list.stream().filter(f -> "added".equals(f.getStatus())).map(CommitFile::getFilename).collect(Collectors.toList());
-            List<String> any = Stream.concat(modified.stream(), Stream.concat(removed.stream(), added.stream())).collect(Collectors.toList());
+            List<String> added = list.stream().filter(f -> "added".equals(f.getStatus())).map(CommitFile::getFilename).toList();
+            List<String> removed = list.stream().filter(f -> "removed".equals(f.getStatus())).map(CommitFile::getFilename).toList();
+            List<String> modified = list.stream().filter(f -> "modified".equals(f.getStatus())).map(CommitFile::getFilename).toList();
+            List<String> renamed = list.stream().filter(f -> "renamed".equals(f.getStatus())).map(CommitFile::getFilename).toList();
+            List<String> copied = list.stream().filter(f -> "copied".equals(f.getStatus())).map(CommitFile::getFilename).toList();
+            List<String> changed = list.stream().filter(f -> "changed".equals(f.getStatus())).map(CommitFile::getFilename).toList();
+            List<String> any = Stream.of(added, removed, modified, renamed, copied, changed).flatMap(Collection::stream).toList();
 
             Map<String, Object> result = new HashMap<>();
             result.put("prFiles", new ObjectMapper().convertValue(list, Object.class));
-            result.put("prFilesModified", modified);
-            result.put("prFilesRemoved", removed);
             result.put("prFilesAdded", added);
+            result.put("prFilesRemoved", removed);
+            result.put("prFilesModified", modified);
+            result.put("prFilesRenamed", renamed);
+            result.put("prFilesCopied", copied);
+            result.put("prFilesChanged", changed);
             result.put("prFilesAny", any);
 
             return result;
@@ -762,12 +843,17 @@ public class GitHubTask {
         }
     }
 
-    private static Map<String, Object> createRepo(Map<String, Object> in, String gitHubUri) {
+    private Map<String, Object> createRepo(Map<String, Object> in, String gitHubUri) {
         String gitHubAccessToken = assertString(in, GITHUB_ACCESSTOKEN);
         String gitHubOrgName = assertString(in, GITHUB_ORGNAME);
         String gitHubRepoName = assertString(in, GITHUB_REPONAME);
 
-        GitHubClient client = GitHubClient.createClient(gitHubUri);
+        GitHubClient client = createClient(gitHubUri);
+
+        if (dryRunMode) {
+            log.info("Dry-run mode enabled: Skipping creation of a repository in {}/{}", gitHubOrgName, gitHubRepoName);
+            return Map.of();
+        }
 
         log.info("Creating repository '{}' in '{}' organization", gitHubRepoName, gitHubOrgName);
 
@@ -779,14 +865,14 @@ public class GitHubTask {
 
             if (repo == null) {
                 log.debug("Repository " + gitHubRepoName + " does not exist in " + gitHubOrgName +
-                        " organization. " + "Proceeding with repo creation");
+                          " organization. " + "Proceeding with repo creation");
 
                 Repository newRepo = new Repository();
                 newRepo.setName(gitHubRepoName);
                 repo = repositoryService.createRepository(gitHubOrgName, newRepo);
 
                 log.info("Repository " + gitHubRepoName + " created successfully in " +
-                        gitHubOrgName + " organization.");
+                         gitHubOrgName + " organization.");
             } else {
                 log.warn("Repository " + repo.generateId() + " already exists. Skipping creation ...");
             }
@@ -796,16 +882,21 @@ public class GitHubTask {
             result.put("scmUrl", repo.getUrl());
             return result;
         } catch (Exception e) {
-            throw new RuntimeException("Error occured while creating repository: ", e);
+            throw new RuntimeException("Error occurred while creating repository: ", e);
         }
     }
 
-    private static Map<String, Object> deleteRepo(Map<String, Object> in, String gitHubUri) {
+    private Map<String, Object> deleteRepo(Map<String, Object> in, String gitHubUri) {
         String gitHubAccessToken = assertString(in, GITHUB_ACCESSTOKEN);
         String gitHubOrgName = assertString(in, GITHUB_ORGNAME);
         String gitHubRepoName = assertString(in, GITHUB_REPONAME);
 
-        GitHubClient client = GitHubClient.createClient(gitHubUri);
+        GitHubClient client = createClient(gitHubUri);
+
+        if (dryRunMode) {
+            log.info("Dry-run mode enabled: Skipping deletion of repository {} in {}", gitHubRepoName, gitHubOrgName);
+            return Map.of();
+        }
 
         log.info("Deleting repository '{}' from '{}' organization", gitHubRepoName, gitHubOrgName);
 
@@ -817,29 +908,33 @@ public class GitHubTask {
 
             if (repo == null) {
                 log.warn("Repository " + gitHubOrgName + "/" + gitHubRepoName + " does not exist. " +
-                        "Looks like it is already deleted. Skipping deletion ...");
+                         "Looks like it is already deleted. Skipping deletion ...");
             } else {
                 log.debug("Repository " + gitHubRepoName + " exists in " + gitHubOrgName +
-                        " organization. " + "Proceeding with repo deletion");
+                          " organization. " + "Proceeding with repo deletion");
 
                 repositoryService.deleteRepository(repo);
                 log.info("Repository " + gitHubRepoName + " deleted successfully from " +
-                        gitHubOrgName + " organization.");
+                         gitHubOrgName + " organization.");
             }
 
             return Collections.emptyMap();
         } catch (Exception e) {
-            throw new RuntimeException("Error occured while deleting repository: ", e);
+            throw new RuntimeException("Error occurred while deleting repository: ", e);
         }
     }
 
     private static Map<String, Object> getLatestSHA(Map<String, Object> in, String gitHubUri) {
+        return Map.of("latestCommitSHA", getLatestSHAValue(in, gitHubUri));
+    }
+
+    private static String getLatestSHAValue(Map<String, Object> in, String gitHubUri) {
         String gitHubAccessToken = assertString(in, GITHUB_ACCESSTOKEN);
         String gitHubOrgName = assertString(in, GITHUB_ORGNAME);
         String gitHubRepoName = assertString(in, GITHUB_REPONAME);
         String gitHubBranchName = getString(in, GITHUB_BRANCH, "master");
 
-        GitHubClient client = GitHubClient.createClient(gitHubUri);
+        GitHubClient client = createClient(gitHubUri);
 
         try {
             //Connect to GitHub
@@ -859,7 +954,7 @@ public class GitHubTask {
 
             log.info("Latest commit SHA: '{}'", latestCommitSHA);
 
-            return Collections.singletonMap("latestCommitSHA", latestCommitSHA);
+            return latestCommitSHA;
         } catch (Exception e) {
             throw new RuntimeException("Error occurred while getting latest commit SHA: " + e.getMessage());
         }
@@ -872,7 +967,7 @@ public class GitHubTask {
         String gitHubRef = getString(in, GITHUB_REF);
         String gitHubPath = assertString(in, GITHUB_PATH);
 
-        GitHubClient client = GitHubClient.createClient(gitHubUri);
+        GitHubClient client = createClient(gitHubUri);
         client.setOAuth2Token(gitHubAccessToken);
         IRepositoryIdProvider repo = RepositoryId.create(gitHubOrgName, gitHubRepoName);
 
@@ -904,13 +999,13 @@ public class GitHubTask {
         }
     }
 
-    private static Map<String, Object> createHook(Map<String, Object> in, String gitHubUri) {
+    private Map<String, Object> createHook(Map<String, Object> in, String gitHubUri) {
         String gitHubAccessToken = assertString(in, GITHUB_ACCESSTOKEN);
         String gitHubOrgName = assertString(in, GITHUB_ORGNAME);
         String gitHubRepoName = assertString(in, GITHUB_REPONAME);
         String hookUrl = assertString(in, GITHUB_HOOK_URL).trim();
 
-        GitHubClient client = GitHubClient.createClient(gitHubUri);
+        GitHubClient client = createClient(gitHubUri);
         client.setOAuth2Token(gitHubAccessToken);
 
         RepositoryService service = new RepositoryService(client);
@@ -932,10 +1027,15 @@ public class GitHubTask {
                 .setEvents(assertList(in, GITHUB_HOOK_EVENTS))
                 .setConfig(config);
 
+        if (dryRunMode) {
+            log.info("Dry-run mode enabled: Skipping creation of a hook in {}/{}", gitHubOrgName, gitHubRepoName);
+            return Map.of();
+        }
+
         try {
             if (MapUtils.getBoolean(in, GITHUB_HOOK_REPLACE, false)) {
                 List<RepositoryHook> hooks = service.getHooks(repo);
-                List<RepositoryHook> existingHooks = hooks.stream().filter(h -> hookUrl.equalsIgnoreCase(h.getUrl())).collect(Collectors.toList());
+                List<RepositoryHook> existingHooks = hooks.stream().filter(h -> hookUrl.equalsIgnoreCase(h.getUrl())).toList();
                 for (RepositoryHook h : existingHooks) {
                     service.deleteHook(repo, h.getId());
                 }
@@ -949,12 +1049,12 @@ public class GitHubTask {
         }
     }
 
-    private static Map<String, Object> createIssue(Map<String, Object> in, String gitHubUri) {
+    private Map<String, Object> createIssue(Map<String, Object> in, String gitHubUri) {
         String gitHubAccessToken = assertString(in, GITHUB_ACCESSTOKEN);
         String gitHubOrgName = assertString(in, GITHUB_ORGNAME);
         String gitHubRepoName = assertString(in, GITHUB_REPONAME);
 
-        GitHubClient client = GitHubClient.createClient(gitHubUri);
+        GitHubClient client = createClient(gitHubUri);
         client.setOAuth2Token(gitHubAccessToken);
 
         IssueService issueService = new IssueService(client);
@@ -966,7 +1066,13 @@ public class GitHubTask {
                 .setAssignee(new User().setLogin(getString(in, ISSUE_ASSIGNEE)))
                 .setLabels(getList(in, ISSUE_LABELS, Collections.<String>emptyList()).stream()
                         .map(l -> new Label().setName(l))
-                        .collect(Collectors.toList()));
+                        .toList());
+
+        if (dryRunMode) {
+            log.info("Dry-run mode enabled: Skipping creation of an issue in {}/{}", gitHubOrgName, gitHubRepoName);
+            return Map.of();
+        }
+
 
         log.info("Creating issue in {}/{}", gitHubOrgName, gitHubRepoName);
 
@@ -1015,11 +1121,74 @@ public class GitHubTask {
         return state;
     }
 
+    @Deprecated
     private static Map<String, Object> makeResult(Object data) {
         Map<String, Object> m = new HashMap<>();
         m.put("ok", true);
         m.put("data", data);
         return m;
+    }
+
+    private static boolean isBlank(String str) {
+        return str == null || str.isBlank();
+    }
+
+    static GitHubClient createClient(String rawUrl) {
+        String host;
+        int port;
+        String scheme;
+
+        try {
+            URI uri = new URI(rawUrl);
+            host = uri.getHost();
+            if ("github.com".equals(host) || "gist.github.com".equals(host)) {
+                host = "api.github.com";
+            }
+
+            scheme = uri.getScheme();
+            port = uri.getPort();
+        } catch (URISyntaxException e) {
+            throw new IllegalArgumentException(e);
+        }
+
+        return new GitHubClient(host, port, scheme) {
+            @Override
+            protected IOException createException(InputStream response, int code, String status) {
+                String responseBody = null;
+
+                if (this.isError(code)) {
+                    RequestError error;
+                    try {
+                        error = this.parseError(response);
+                    } catch (IOException e) {
+                        return e;
+                    }
+
+                    if (error != null) {
+                        return new RequestException(error, code);
+                    }
+                } else {
+                    try (BufferedInputStream reader = new BufferedInputStream(response)) {
+                        responseBody = new String(reader.readAllBytes());
+                    } catch (IOException e) {
+                        // ignore
+                    }
+                }
+
+                String message;
+                if (status != null && !status.isEmpty()) {
+                    message = status + " (" + code + ')';
+                } else {
+                    message = "Unknown error occurred (" + code + ')';
+                }
+
+                if (responseBody != null) {
+                    message += "\n response: " + responseBody;
+                }
+
+                return new IOException(message);
+            }
+        };
     }
 
     public enum Action {
